# tounisiano

./: .pylintrc  LICENSE  README.md  config.yml  pyproject.toml
datasets/instadeep_trcd/: process.py
tounisiano/: __main__.py  cli.py  config.py  utils.py
tounisiano/config/: __init__.py  config.py
tounisiano/datasets/: __init__.py  abstract_dataset.py  base.py  dataset_formatter.py  instadeep_trcd.py  models.py
tounisiano/datasets/instadeep_trcd/: __init__.py  instadeep_trcd.py  process.py
tounisiano/tasks/: __init__.py  generate_dataset.py  generate_dataset_task.py  train_task.py
tounisiano/trainer/: __init__.py  abstract_trainer.py  base.py  models.py  qlora_fine_tuning.py
tounisiano/utils/: utils.py
