[tool.poetry]
name = "tounisiano"
version = "0.1.0"
description = "AI Assistant that speaks Tunisian dialect"
authors = ["Joumen HARZLI"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.3"
pyyaml = "^6.0.1"
pyarrow = "^14.0.1"
accelerate = "^0.25.0"
bitsandbytes = "^0.41.3"
peft = "^0.7.0"
transformers = "^4.35.2"
tokenizers = "^0.15.0"
trl = "^0.7.4"
datasets = "^2.15.0"
scipy = "^1.11.4"
dataclasses-json = "^0.6.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pylint = "^3.0.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
